FIX: broken nav and remove unused classes

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     Logo
 <!--                    <img src="/assets/logo.svg" width="115px" alt="Logo">-->
                 </a>
-                <nav class="main-header__nav hidden-sm hidden-xs">
+                <nav class="main-header__nav">
                     <a class="main-nav__link" href="/about">About</a>
                     <a class="main-nav__link" href="/portfolio">Work</a>
                     <a class="main-nav__link" href="/contact">Contact</a>
