--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <div class="wrapper">
             <header class="main-header">
                 <a class="main-header__logo" href="index.html" aria-label="Lee Groenewegen - Home">LG</a>
-                <nav class="main-header__nav hidden-sm hidden-xs" role="navigation" aria-label="Main navigation">
+                <nav class="main-header__nav" role="navigation" aria-label="Main navigation">
                     <a class="main-nav__link" href="about.html">About</a>
                     <a class="main-nav__link" href="cv.html">CV</a>
                     <a class="main-nav__link" href="contact.html" aria-current="page">Contact</a>
