--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                     <a class="main-nav__link" href="cv.html">CV</a>
                     <a class="main-nav__link" href="contact.html">Contact</a>
                 </nav>
-                <button class="mobile-menu-toggle visible-sm visible-xs" aria-label="Open navigation menu" aria-expanded="false">
+                <button class="mobile-menu-toggle" aria-label="Open navigation menu" aria-expanded="false">
                     <span></span>
                     <span></span>
                     <span></span>
