Add Shopify Plus page highlighting MENA market expertise and architecture solutions

--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
                 <a class="main-header__logo" href="index.html" aria-label="Lee Groenewegen - Home">LG</a>
                 <nav class="main-header__nav" role="navigation" aria-label="Main navigation">
                     <a class="main-nav__link" href="about.html" aria-current="page">About</a>
+                    <a class="main-nav__link" href="shopify-plus.html">Shopify Plus</a>
                     <a class="main-nav__link" href="cv.html">CV</a>
                     <a class="main-nav__link" href="contact.html">Contact</a>
                 </nav>
