--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
                 </a>
                 <nav class="main-header__nav">
                     <a class="main-nav__link" href="/about">About</a>
+                    <a class="main-nav__link" href="/shopify-plus.html">Shopify Plus</a>
                     <a class="main-nav__link" href="/portfolio">Work</a>
                     <a class="main-nav__link" href="/contact">Contact</a>
                 </nav>
