Fix broken layout - remove duplicate cv-grid and add proper sidebar

--- a/shopify-plus.html
+++ b/shopify-plus.html
@@ -94,7 +94,44 @@
         <section class="cv-content">
             <div class="wrapper">
                 <div class="cv-grid">
-                <div class="cv-grid">
+                    <div class="cv-sidebar">
+                        <div class="cv-section">
+                            <h3>Focus Areas</h3>
+                            <div class="skills-compact">
+                                <div class="skill-tag">Solutions Architecture</div>
+                                <div class="skill-tag">Multi-Market Stores</div>
+                                <div class="skill-tag">CI/CD Pipelines</div>
+                                <div class="skill-tag">Content Team Workflows</div>
+                                <div class="skill-tag">Deployment Strategy</div>
+                                <div class="skill-tag">MENA Markets</div>
+                                <div class="skill-tag">Payment Integration</div>
+                                <div class="skill-tag">Version Control</div>
+                                <div class="skill-tag">Enterprise Scale</div>
+                            </div>
+                        </div>
+                        
+                        <div class="cv-section">
+                            <h3>Engagement Types</h3>
+                            <ul class="experience-list">
+                                <li>Architecture Audit</li>
+                                <li>Strategic Advisory</li>
+                                <li>Technical Leadership</li>
+                                <li>Implementation</li>
+                                <li>Team Training</li>
+                            </ul>
+                        </div>
+
+                        <div class="cv-section">
+                            <h3>Markets Expertise</h3>
+                            <ul class="experience-list">
+                                <li>Middle East</li>
+                                <li>North Africa</li>
+                                <li>UK/EU to MENA</li>
+                                <li>Cross-border</li>
+                            </ul>
+                        </div>
+                    </div>
+
                     <div class="cv-main">
                         <div class="cv-section">
                             <h3>Solutions Architecture Specialist</h3>
