Update regional experience and remove Problems I Solve section

--- a/shopify-plus.html
+++ b/shopify-plus.html
@@ -4,7 +4,7 @@
 <head>
     <title>Shopify Plus Solutions Architecture - Lee Groenewegen</title>
     <meta charset="utf-8">
-    <meta name="description" content="Expert Shopify Plus solutions architect specializing in multi-market store management, large content team workflows, and enterprise deployment strategies for MENA markets.">
+    <meta name="description" content="Expert Shopify Plus solutions architect specializing in multi-market store management, large content team workflows, and enterprise deployment strategies.">
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <link href="main.css" rel="stylesheet">
 
@@ -69,9 +69,10 @@
                         <div class="cv-section">
                             <h3>Regional Experience</h3>
                             <ul class="experience-list">
-                                <li>Middle East (MENA)</li>
-                                <li>North Africa (MENA)</li>
-                                <li>UK/EU to MENA</li>
+                                <li>UK</li>
+                                <li>US</li>
+                                <li>Europe (DE, FR, etc.)</li>
+                                <li>MENA</li>
                                 <li>Cross-border Commerce</li>
                             </ul>
                         </div>
@@ -91,22 +92,6 @@
                         <div class="cv-section">
                             <h3>Shopify Plus Solutions Architect</h3>
                             <p>I solve complex e-commerce challenges through strategic architecture. Specializing in multi-market operations, I design scalable solutions for managing multiple stores, coordinating large distributed teams, and building robust deployment workflows that eliminate bottlenecks and reduce risk.</p>
-                        </div>
-
-                        <div class="cv-section">
-                            <h3>Problems I Solve</h3>
-                            
-                            <h4>Multi-Market Store Complexity</h4>
-                            <p><strong>The Challenge:</strong> Managing multiple regional stores with different content, features, and workflows becomes chaotic without proper architecture.</p>
-                            <p><strong>My Solution:</strong> I assess your business requirements and design the right architecture—whether Shopify Markets, expansion stores, or separate instances—creating governance models that enable teams to work efficiently across regions while maintaining consistency.</p>
-
-                            <h4>Team Coordination & Deployment Chaos</h4>
-                            <p><strong>The Challenge:</strong> Large content teams stepping on each other's work, no clear deployment process, and fear of breaking production.</p>
-                            <p><strong>My Solution:</strong> I architect CI/CD pipelines with proper version control workflows, staging environments, automated testing, and rollback capabilities. Your teams get clear processes, proper governance, and confidence in deployments.</p>
-
-                            <h4>Operational Inefficiency at Scale</h4>
-                            <p><strong>The Challenge:</strong> Manual processes, repetitive tasks, and workflow bottlenecks that don't scale as your business grows.</p>
-                            <p><strong>My Solution:</strong> I leverage Shopify Flow and Mechanic to automate operations, streamline workflows, and build intelligent systems that handle complexity automatically—from inventory management to customer communications and order processing.</p>
                         </div>
 
                         <div class="cv-section">
