Make paragraph text sizes consistent with bullet points by using experience-list styling

--- a/shopify-plus.html
+++ b/shopify-plus.html
@@ -91,7 +91,9 @@
                     <div class="cv-main">
                         <div class="cv-section">
                             <h3>Shopify Plus Solutions Architect</h3>
-                            <p>I solve complex e-commerce challenges through strategic architecture. Specializing in multi-market operations, I design scalable solutions for managing multiple stores, coordinating large distributed teams, and building robust deployment workflows that eliminate bottlenecks and reduce risk.</p>
+                            <ul class="experience-list">
+                                <li>I solve complex e-commerce challenges through strategic architecture. Specializing in multi-market operations, I design scalable solutions for managing multiple stores, coordinating large distributed teams, and building robust deployment workflows that eliminate bottlenecks and reduce risk.</li>
+                            </ul>
                         </div>
 
                         <div class="cv-section">
@@ -137,7 +139,9 @@
 
                         <div class="cv-section">
                             <h3>Approach</h3>
-                            <p>I focus on solving real business problems through smart architecture. My approach is strategic but pragmatic—I move quickly to identify issues, design solutions that scale, and implement systems that work. I excel at translating complex operational challenges into robust technical solutions that make your teams more effective.</p>
+                            <ul class="experience-list">
+                                <li>I focus on solving real business problems through smart architecture. My approach is strategic but pragmatic—I move quickly to identify issues, design solutions that scale, and implement systems that work. I excel at translating complex operational challenges into robust technical solutions that make your teams more effective.</li>
+                            </ul>
                             
                             <h4>How I Work</h4>
                             <ul class="experience-list">
@@ -163,7 +167,9 @@
 
                         <div class="cv-section" style="background: #f8f8f8; padding: 30px; border-radius: 8px; text-align: center;">
                             <h3>Let's Solve Your Challenges</h3>
-                            <p>Whether you need help with multi-market architecture, deployment workflows, team coordination, or operations automation, I'd love to discuss how I can help.</p>
+                            <ul class="experience-list" style="text-align: left;">
+                                <li>Whether you need help with multi-market architecture, deployment workflows, team coordination, or operations automation, I'd love to discuss how I can help.</li>
+                            </ul>
                             <p style="margin-top: 20px;">
                                 <a href="contact.html" class="cta-link" style="display: inline-block; background: #f51441; color: white; padding: 12px 30px; border-radius: 4px; text-decoration: none; font-weight: 600; transition: background 0.3s;">Get In Touch</a>
                             </p>
