--- a/shopify-plus.html
+++ b/shopify-plus.html
@@ -91,7 +91,7 @@
                     <div class="cv-main">
                         <div class="cv-section">
                             <h3>Shopify Plus Solutions Architect</h3>
-                            <ul class="experience-list">
+                            <ul class="experience-list" style="list-style: none; padding-left: 0;">
                                 <li>I solve complex e-commerce challenges through strategic architecture. Specializing in multi-market operations, I design scalable solutions for managing multiple stores, coordinating large distributed teams, and building robust deployment workflows that eliminate bottlenecks and reduce risk.</li>
                             </ul>
                         </div>
@@ -139,7 +139,7 @@
 
                         <div class="cv-section">
                             <h3>Approach</h3>
-                            <ul class="experience-list">
+                            <ul class="experience-list" style="list-style: none; padding-left: 0;">
                                 <li>I focus on solving real business problems through smart architecture. My approach is strategic but pragmatic—I move quickly to identify issues, design solutions that scale, and implement systems that work. I excel at translating complex operational challenges into robust technical solutions that make your teams more effective.</li>
                             </ul>
                             
@@ -167,7 +167,7 @@
 
                         <div class="cv-section" style="background: #f8f8f8; padding: 30px; border-radius: 8px; text-align: center;">
                             <h3>Let's Solve Your Challenges</h3>
-                            <ul class="experience-list" style="text-align: left;">
+                            <ul class="experience-list" style="list-style: none; padding-left: 0; text-align: left;">
                                 <li>Whether you need help with multi-market architecture, deployment workflows, team coordination, or operations automation, I'd love to discuss how I can help.</li>
                             </ul>
                             <p style="margin-top: 20px;">
