Change Specializations to Specialisations (UK English)

--- a/shopify-plus.html
+++ b/shopify-plus.html
@@ -54,7 +54,7 @@
                 <div class="cv-grid">
                     <div class="cv-sidebar">
                         <div class="cv-section">
-                            <h3>Specializations</h3>
+                            <h3>Specialisations</h3>
                             <div class="skills-compact">
                                 <div class="skill-tag">Solutions Architecture</div>
                                 <div class="skill-tag">Multi-Market Stores</div>
