Update typography and British English spelling - increase paragraph font-size to 16px, set page header to 32px on mobile/tablet, change 'specializing' to 'specialising'

--- a/shopify-plus.html
+++ b/shopify-plus.html
@@ -4,7 +4,7 @@
 <head>
     <title>Shopify Plus Solutions Architecture - Lee Groenewegen</title>
     <meta charset="utf-8">
-    <meta name="description" content="Expert Shopify Plus solutions architect specializing in multi-market store management, large content team workflows, and enterprise deployment strategies.">
+    <meta name="description" content="Expert Shopify Plus solutions architect specialising in multi-market store management, large content team workflows, and enterprise deployment strategies.">
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <link href="main.css" rel="stylesheet">
 
@@ -91,9 +91,7 @@
                     <div class="cv-main">
                         <div class="cv-section">
                             <h3>Shopify Plus Solutions Architect</h3>
-                            <ul class="experience-list" style="list-style: none; padding-left: 0;">
-                                <li>I solve complex e-commerce challenges through strategic architecture. Specializing in multi-market operations, I design scalable solutions for managing multiple stores, coordinating large distributed teams, and building robust deployment workflows that eliminate bottlenecks and reduce risk.</li>
-                            </ul>
+                            <p>I solve complex e-commerce challenges through strategic architecture. Specialising in multi-market operations, I design scalable solutions for managing multiple stores, coordinating large distributed teams, and building robust deployment workflows that eliminate bottlenecks and reduce risk.</p>
                         </div>
 
                         <div class="cv-section">
@@ -103,7 +101,7 @@
                                 <li><strong>Deployment Workflows:</strong> CI/CD pipelines, Git strategies, environment management, and safe deployment practices</li>
                                 <li><strong>Team Collaboration Systems:</strong> Workflows and governance that prevent conflicts and enable distributed teams to work efficiently</li>
                                 <li><strong>Operations Automation:</strong> Shopify Flow and Mechanic implementations that eliminate manual work and reduce errors</li>
-                                <li><strong>Integration Architecture:</strong> Connecting ERP, PIM, OMS, and CRM systems at enterprise scale</li>
+                                <li><strong>Integration Architecture:</strong> Connecting third-party systems and services at enterprise scale</li>
                                 <li><strong>Content Management:</strong> Frameworks for managing localized content and regional variations across markets</li>
                             </ul>
                         </div>
@@ -139,11 +137,9 @@
 
                         <div class="cv-section">
                             <h3>Approach</h3>
-                            <ul class="experience-list" style="list-style: none; padding-left: 0;">
-                                <li>I focus on solving real business problems through smart architecture. My approach is strategic but pragmatic—I move quickly to identify issues, design solutions that scale, and implement systems that work. I excel at translating complex operational challenges into robust technical solutions that make your teams more effective.</li>
-                            </ul>
+                            <p>I focus on solving real business problems through smart architecture. My approach is strategic but pragmatic—I move quickly to identify issues, design solutions that scale, and implement systems that work. I excel at translating complex operational challenges into robust technical solutions that make your teams more effective.</p>
                             
-                            <h4>How I Work</h4>
+                            <h4 style="margin-top: 30px;">How I Work</h4>
                             <ul class="experience-list">
                                 <li><strong>Architecture Audit:</strong> Comprehensive review with strategic recommendations and technical roadmap</li>
                                 <li><strong>Advisory + Leadership:</strong> Ongoing guidance for large teams and multi-market implementations</li>
@@ -167,9 +163,7 @@
 
                         <div class="cv-section" style="background: #f8f8f8; padding: 30px; border-radius: 8px; text-align: center;">
                             <h3>Let's Solve Your Challenges</h3>
-                            <ul class="experience-list" style="list-style: none; padding-left: 0; text-align: left;">
-                                <li>Whether you need help with multi-market architecture, deployment workflows, team coordination, or operations automation, I'd love to discuss how I can help.</li>
-                            </ul>
+                            <p>Whether you need help with multi-market architecture, deployment workflows, team coordination, or operations automation, I'd love to discuss how I can help.</p>
                             <p style="margin-top: 20px;">
                                 <a href="contact.html" class="cta-link" style="display: inline-block; background: #f51441; color: white; padding: 12px 30px; border-radius: 4px; text-decoration: none; font-weight: 600; transition: background 0.3s;">Get In Touch</a>
                             </p>
