Add Shopify Plus link to mobile navigation on all pages

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <nav class="mobile-menu" role="navigation" aria-label="Mobile navigation">
                 <button class="mobile-menu-close" aria-label="Close navigation menu">×</button>
                 <a class="mobile-nav__link" href="about.html">About</a>
+                <a class="mobile-nav__link" href="shopify-plus.html">Shopify Plus</a>
                 <a class="mobile-nav__link" href="cv.html">CV</a>
                 <a class="mobile-nav__link" href="contact.html">Contact</a>
             </nav>
