--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
                 <button class="mobile-menu-close" aria-label="Close navigation menu">×</button>
                 <a class="mobile-nav__link" href="index.html">Home</a>
                 <a class="mobile-nav__link" href="about.html">About</a>
+                <a class="mobile-nav__link" href="shopify-plus.html">Shopify Plus</a>
                 <a class="mobile-nav__link" href="cv.html">CV</a>
                 <a class="mobile-nav__link" href="contact.html" aria-current="page">Contact</a>
             </nav>
