--- a/cv.html
+++ b/cv.html
@@ -35,6 +35,7 @@
                 <button class="mobile-menu-close" aria-label="Close navigation menu">×</button>
                 <a class="mobile-nav__link" href="index.html">Home</a>
                 <a class="mobile-nav__link" href="about.html">About</a>
+                <a class="mobile-nav__link" href="shopify-plus.html">Shopify Plus</a>
                 <a class="mobile-nav__link" href="cv.html" aria-current="page">CV</a>
                 <a class="mobile-nav__link" href="contact.html">Contact</a>
             </nav>
