Improve accessibility and performance - add fetchpriority to hero image, make link text more descriptive, change h4 to h3 on contact page with h4 styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Professional web developer specialising in Shopify and e-commerce solutions. Expert in custom themes, performance optimisation, and conversion-focused design.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
+    <link rel="preload" href="assets/home-hero.jpg" as="image" fetchpriority="high">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -59,7 +60,7 @@
                     <p>
                         Custom websites built with modern technologies, optimized for performance and user experience.
                     </p>
-                    <a class="btn btn-primary btn--small" href="about.html">Learn More</a>
+                    <a class="btn btn-primary btn--small" href="about.html">Learn More About Web Development</a>
                 </div>
                 <div class="home-banner__column">
                     <svg class="svg-icon" viewBox="0 0 20 20" aria-hidden="true">
@@ -69,7 +70,7 @@
                     <p>
                         Complete Shopify solutions from setup to custom themes, designed to maximize conversions.
                     </p>
-                    <a class="btn btn-primary btn--small" href="about.html">Learn More</a>
+                    <a class="btn btn-primary btn--small" href="about.html">Learn More About Shopify Solutions</a>
             </div>
             <div class="home-banner__column">
                 <svg class="svg-icon" viewBox="0 0 20 20" aria-hidden="true">
@@ -79,7 +80,7 @@
                 <p>
                     Ongoing support, updates, and optimisation to keep your website running smoothly.
                 </p>
-                <a class="btn btn-primary btn--small" href="contact.html">Get Support</a>
+                <a class="btn btn-primary btn--small" href="contact.html">Get Support Services</a>
             </div>
         </div>
         <div style="clear:both"></div>
