Fix contact page h3 styling, simplify button text, and change primary red color from #F51441 to #e3012f

--- a/shopify-plus.html
+++ b/shopify-plus.html
@@ -165,7 +165,7 @@
                             <h3>Let's Solve Your Challenges</h3>
                             <p>Whether you need help with multi-market architecture, deployment workflows, team coordination, or operations automation, I'd love to discuss how I can help.</p>
                             <p style="margin-top: 20px;">
-                                <a href="contact.html" class="cta-link" style="display: inline-block; background: #f51441; color: white; padding: 12px 30px; border-radius: 4px; text-decoration: none; font-weight: 600; transition: background 0.3s;">Get In Touch</a>
+                                <a href="contact.html" class="cta-link" style="display: inline-block; background: #e3012f; color: white; padding: 12px 30px; border-radius: 4px; text-decoration: none; font-weight: 600; transition: background 0.3s;">Get In Touch</a>
                             </p>
                         </div>
                     </div>
