--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p>
                         Custom websites built with modern technologies, optimized for performance and user experience.
                     </p>
-                    <a class="btn btn-primary btn--small" href="about.html">Learn More About Web Development</a>
+                    <a class="btn btn-primary btn--small" href="about.html">Learn More</a>
                 </div>
                 <div class="home-banner__column">
                     <svg class="svg-icon" viewBox="0 0 20 20" aria-hidden="true">
@@ -70,7 +70,7 @@
                     <p>
                         Complete Shopify solutions from setup to custom themes, designed to maximize conversions.
                     </p>
-                    <a class="btn btn-primary btn--small" href="about.html">Learn More About Shopify Solutions</a>
+                    <a class="btn btn-primary btn--small" href="about.html">Learn More</a>
             </div>
             <div class="home-banner__column">
                 <svg class="svg-icon" viewBox="0 0 20 20" aria-hidden="true">
@@ -80,7 +80,7 @@
                 <p>
                     Ongoing support, updates, and optimisation to keep your website running smoothly.
                 </p>
-                <a class="btn btn-primary btn--small" href="contact.html">Get Support Services</a>
+                <a class="btn btn-primary btn--small" href="contact.html">Get Support</a>
             </div>
         </div>
         <div style="clear:both"></div>
