--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Professional web developer specialising in Shopify and e-commerce solutions. Expert in custom themes, performance optimisation, and conversion-focused design.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
+    <link rel="preload" href="assets/home-hero.webp" as="image" type="image/webp" fetchpriority="high">
     <link rel="preload" href="assets/home-hero.jpg" as="image" fetchpriority="high">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
