Make main.css non-render-blocking on all pages for improved Lighthouse performance

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Get in touch with Lee Groenewegen for your Shopify and e-commerce development needs. Professional web development services and consultation available.">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <link href="main.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link href="main.css" rel="stylesheet"></noscript>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
