--- a/shopify-plus.html
+++ b/shopify-plus.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Expert Shopify Plus solutions architect specialising in multi-market store management, large content team workflows, and enterprise deployment strategies.">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <link href="main.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link href="main.css" rel="stylesheet"></noscript>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
