--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Lee Groenewegen - Web Developer & E-commerce Specialist</title>
     <meta name="description" content="Professional web developer specialising in Shopify and e-commerce solutions. Expert in custom themes, performance optimisation, and conversion-focused design.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="main.css"></noscript>
     <link rel="preload" href="assets/home-hero.webp" as="image" type="image/webp" fetchpriority="high">
     <link rel="preload" href="assets/home-hero.jpg" as="image" fetchpriority="high">
     <link rel="preconnect" href="https://fonts.googleapis.com">
