--- a/support.html
+++ b/support.html
@@ -6,7 +6,8 @@
     <title>Shopify Expertise - Lee Groenewegen</title>
     <meta name="description" content="Expert Shopify development, customisation, and support services. Comprehensive Shopify solutions for growing e-commerce businesses.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="main.css"></noscript>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
