Revert "Make main.css non-render-blocking on all pages for improved Lighthouse performance"
This reverts commit 8238ca406f401604ee76541f5db57d6a32940ca9.

--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Learn about Lee Groenewegen, a professional web developer specialising in Shopify and e-commerce solutions with expertise in custom themes and performance optimisation.">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <link href="main.css" rel="stylesheet" media="print" onload="this.media='all'">
-    <noscript><link href="main.css" rel="stylesheet"></noscript>
+    <link href="main.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
