--- a/cv.html
+++ b/cv.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Professional CV and experience of Lee Groenewegen, experienced Shopify developer and e-commerce specialist.">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <link href="main.css" rel="stylesheet" media="print" onload="this.media='all'">
-    <noscript><link href="main.css" rel="stylesheet"></noscript>
+    <link href="main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
